--- a/about.html
+++ b/about.html
@@ -165,7 +165,7 @@
     <!-- mouse cursor drag end -->
 
     <!-- preloader start -->
-    <div class="ax-loader-wrap" id="ax-loader-wrap">
+    <!-- <div class="ax-loader-wrap" id="ax-loader-wrap">
         <div class="ax-loader-inner">
             <div class="ax-loader">
                 <span class="ax-loader-item"></span>
@@ -178,7 +178,7 @@
                 <span class="ax-loader-item"></span>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- preloader end -->
 
 
@@ -402,12 +402,12 @@
                     <div class="container">
                         <div class="about-us-main p-relative">
                             <div class="about-us-thumb-2">
-                                <img src="assets/img/party_store_images/Partystore17.png" alt="image not found">
+                                <img src="assets/img/party_store_images/Partystore17.png" loading="lazy" alt="image not found">
                             </div>
                             <div class="row">
                                 <div class="col-xxl-6 col-xl-6 col-lg-6">
                                     <div class="about-us-thumb-1 mb-60">
-                                        <img src="assets/img/party_store_images/Partystore32.png" alt="image not found">
+                                        <img src="assets/img/party_store_images/Partystore32.png" loading="lazy" alt="image not found">
                                     </div>
                                 </div>
                                 <div class="col-xxl-6 col-xl-6 col-lg-6">
@@ -437,7 +437,8 @@
                 <!-- about us area end  -->
 
                 <!-- team area start -->
-                <section class="team-area primary-bg section-spacing-top">
+                 
+                <!-- <section class="team-area primary-bg section-spacing-top">
                     <div class="container">
                         <div class="section__title-wrapper is-white tpl__item-center mb-60">
                             <h2 class="section__title-inner title-anim">Meet The Team</h2>
@@ -515,17 +516,17 @@
                             </div>
                         </div>
                     </div>
-                </section>
+                </section> -->
                 <!-- team area end-->
 
                 <!-- history area start -->
                 <section class="history-area fix p-relative section-spacing">
                     <div class="history-thumbs">
                         <div class="history-thumb-1">
-                            <img src="assets/img/party_store_images/Partystore22.png" alt="image not found">
+                            <img src="assets/img/party_store_images/Partystore22.png" loading="lazy" alt="image not found">
                         </div>
                         <div class="history-thumb-2">
-                            <img src="assets/img/party_store_images/Partystore15.png" alt="image not found">
+                            <img src="assets/img/party_store_images/Partystore15.png" loading="lazy" alt="image not found">
                         </div>
                     </div>
                     <div class="container">
@@ -555,7 +556,7 @@
                         <div class="row">
                             <div class="col-xxl-12">
                                 <div class="history-thumb-3">
-                                    <img src="assets/img/party_store_images/Partystore23.png" alt="image not found">
+                                    <img src="assets/img/party_store_images/Partystore23.png" loading="lazy" alt="image not found">
                                 </div>
                             </div>
                         </div>
@@ -579,12 +580,12 @@
                             <div class="col-xl-12">
                                 <div class="why-wrapper">
                                     <div class="why-content">
-                                        <div class="why-thumb" data-background="assets/img/party_store_images/Partystore27.png">
+                                        <div class="why-thumb" data-background="assets/img/party_store_images/Partystore27.png" loading="lazy">
                                         </div>
                                         <div class="area__btn">
                                             <a href="assets/video/team-session.mp4" class="circle-btn popup-video">
                                                 <span class="icon-box"
-                                                    data-background="assets/img/party_store_images/Partystore19.png">
+                                                    data-background="assets/img/party_store_images/Partystore19.png" loading="lazy">
                                                     <svg width="24" height="26" viewBox="0 0 24 26" fill="none"
                                                         xmlns="http://www.w3.org/2000/svg">
                                                         <path
