--- a/service-02.html
+++ b/service-02.html
@@ -165,7 +165,8 @@
     <!-- mouse cursor drag end -->
 
     <!-- preloader start -->
-    <div class="ax-loader-wrap" id="ax-loader-wrap">
+
+    <!-- <div class="ax-loader-wrap" id="ax-loader-wrap">
         <div class="ax-loader-inner">
             <div class="ax-loader">
                 <span class="ax-loader-item"></span>
@@ -178,7 +179,8 @@
                 <span class="ax-loader-item"></span>
             </div>
         </div>
-    </div>
+    </div> -->
+    
     <!-- preloader end -->
 
 
@@ -451,7 +453,7 @@
                         <img class="hero-3__shape-3" src="assets/img/shapes/arrow-down-left.png" alt="image not found">
                     </div>
                     <div class="hero-3__shapes-2 p-relative hero-3_wrapper">
-                        <img class="hero-3__shape-4 hero-3-item" src="assets/img/party_store_images/Partystore18.png"
+                        <img class="hero-3__shape-4 hero-3-item" src="assets/img/party_store_images/Partystore18.png" loading="lazy"
                             alt="image not found">
                     </div>
 
@@ -534,7 +536,7 @@
                                             </a>
                                         </div>
                                         <div class="blog-thumb-hover d-none d-md-block"
-                                            data-background="assets/img/party_store_images/Partystore32.png"></div>
+                                            data-background="assets/img/party_store_images/Partystore32.png" loading="lazy"></div>
                                     </div>
                                     <div class="blog__item-1">
                                         <div class="">
@@ -556,7 +558,7 @@
                                             </a>
                                         </div>
                                         <div class="blog-thumb-hover d-none d-md-block"
-                                            data-background="assets/img/party_store_images/Partystore21.png"></div>
+                                            data-background="assets/img/party_store_images/Partystore21.png" loading="lazy"></div>
                                     </div>
                                     <div class="blog__item-1">
                                         <div class="">
@@ -578,7 +580,7 @@
                                             </a>
                                         </div>
                                         <div class="blog-thumb-hover d-none d-md-block"
-                                            data-background="assets/img/party_store_images/Partystore8.png"></div>
+                                            data-background="assets/img/party_store_images/Partystore8.png" loading="lazy"></div>
                                     </div>
 
                                     <div class="blog__item-1">
@@ -625,7 +627,7 @@
                                             </a>
                                         </div>
                                         <div class="blog-thumb-hover d-none d-md-block"
-                                            data-background="assets/img/party_store_images/Partystore22.png"></div>
+                                            data-background="assets/img/party_store_images/Partystore22.png" loading="lazy"></div>
                                     </div>
 
                                     <div class="blog-img-wrap">
@@ -769,7 +771,7 @@
                                         <div class="area__btn">
                                             <a href="assets/video/team-session.mp4" class="circle-btn popup-video">
                                                 <span class="icon-box"
-                                                    data-background="assets/img/party_store_images/Partystore18.png">
+                                                    data-background="assets/img/party_store_images/Partystore18.png" loading="lazy">
                                                     <svg width="24" height="26" viewBox="0 0 24 26" fill="none"
                                                         xmlns="http://www.w3.org/2000/svg">
                                                         <path
@@ -782,7 +784,7 @@
                                             </a>
                                         </div>
                                         <span class="line"></span>
-                                        <img src="assets/img/party_store_images/Partystore9.png" alt="image not found">
+                                        <img src="assets/img/party_store_images/Partystore9.png" loading="lazy" alt="image not found">
                                     </div>
                                     <p class="xlarge mb-65">From intimate gatherings to grand celebrations, our team designs
                                         extraordinary events that leave lasting impressions. We combine creativity, meticulous planning,
